# trabalho-ia-rp

./: .gitignore  CMakeLists.txt  README.md
data/: PALAVRASpc.txt
include/trabalho-ia/: file_system_utils.hpp  neural_network.hpp  text_processor.hpp  utils.hpp
src/: main.cpp
src/io/: text_processor.cpp
src/net/: neural_network.cpp
src/utils/: file_system_utils.cpp
